feat: Add Playwright E2E testing setup with comprehensive test coverage and CI integration

--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,10 @@ playground/
 *.bak
 *.backup
 *.old
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
