NOAA Marine Station Selection Fix

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,10 @@
 name: Automated Release
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches:
-      - 'release/**'
+      - main
 
 permissions:
   contents: write
@@ -11,6 +12,8 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
+    # Only run if PR was merged and came from a release branch
+    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release/')
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -18,7 +21,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Read package version
         id: package
@@ -28,9 +31,11 @@ jobs:
 
       - name: Validate release branch version
         run: |
-          BRANCH_VERSION="${GITHUB_REF#refs/heads/release/}"
+          # Extract version from the source branch name (e.g., release/1.2.3 -> 1.2.3)
+          BRANCH_VERSION="${{ github.event.pull_request.head.ref }}"
+          BRANCH_VERSION="${BRANCH_VERSION#release/}"
           if [ -z "$BRANCH_VERSION" ]; then
-            echo "Could not determine release branch version from $GITHUB_REF"
+            echo "Could not determine release branch version from ${{ github.event.pull_request.head.ref }}"
             exit 1
           fi
           if [ "$BRANCH_VERSION" != "${{ steps.package.outputs.version }}" ]; then
