fix: update base paths in 404.html, manifest.json, and vite.config.ts for root deployment

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
       "type": "image/svg+xml"
     }
   ],
-  "start_url": "/fishing-report/",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#2563eb",
   "background_color": "#ffffff"
