--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fishing-report",
-  "version": "1.2.4",
+  "version": "1.3.0",
   "description": "Production-ready React + TypeScript fishing forecast app",
   "type": "module",
   "scripts": {
@@ -14,6 +14,11 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
@@ -28,6 +33,7 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.1.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
